<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Styx Browser</string>
    <string name="app_version_name" translatable="false">\"Lyna\"</string>
    <string name="accent_amber">Amber</string>
    <string name="accent_blue">Blue</string>
    <string name="accent_brown">Brown</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_cyan">Cyan</string>
    <string name="accent_deep_orange">Deep Orange</string>
    <string name="accent_deep_purple">Deep Purple</string>
    <string name="action_delete_all_bookmarks">Delete all bookmarks</string>
    <string name="action_sessions">Sessions</string>
    <string name="agent">User agent</string>
    <string-array name="block_javascript" translatable="false">
        <item>@string/no</item>
        <item>@string/unlisted_javascript</item>
        <item>@string/listed_javascript</item>
    </string-array>
    <string name="blocklist_update_frequency">Auto-update frequency</string>
    <string name="blocklist_update_mode">Auto-update mode</string>
    <string name="bookmark_in_new_tab">Bookmark in new tab</string>
    <string name="bookmark_settings">Bookmarks</string>
    <string name="close_on_last_tab">Close browser with last tab</string>
    <string name="color_mode">Color mode</string>
    <string name="cookies">Enable cookies</string>
    <string name="enable">Enable</string>
    <string name="export_bookmarks">Export bookmarks to backup</string>
    <string name="export_settings">Export settings to backup</string>
    <string name="force_zoom_summary">Does not work if JavaScript is not enabled</string>
    <string name="force_zoom">Force zoom for websites</string>
    <string name="generic_import">Import</string>
    <string name="home">Homepage</string>
    <string name="homepage_in_new_tab">Homepage in new tab</string>
    <string name="image_url">Set background image for search engine</string>
    <string name="import_backup">Import bookmarks from backup</string>
    <string name="import_export_settings">Import &amp; Export</string>
    <string name="import_settings">Import settings from backup</string>
    <string name="incognito_cookies">Enable cookies in incognito mode</string>
    <string name="java">Enable JavaScript</string>
    <string name="load_images">Load images</string>
    <string name="long_press_tab">Long press on the \"Tab\" icon opens a new tab</string>
    <string name="new_tab_position">New tab position</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="pref_category_filters">Filters</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_summary_filters">Local or remote files defining your content control rules</string>
    <string name="pref_summary_close_drawer">Automatically close Drawer after creating or deleting a tab</string>
    <string name="pref_summary_locked_drawers">Tabs and Bookmarks drawers are locked</string>
    <string name="pref_summary_menu_show_exit">Incognito mode always displays the button</string>
    <string name="pref_summary_tab_list_item_show_close_button">Display close tab buttons on tab list items</string>
    <string name="pref_summary_use_bottom_sheets">Tabs and Bookmarks are shown in bottom sheets instead of side drawers</string>
    <string name="pref_title_close_drawer">Close drawer</string>
    <string name="pref_title_download_dialog">Show download dialog</string>
    <string name="pref_title_locked_drawers">Locked drawers</string>
    <string name="pref_title_menu_show_exit">Show \"Exit\" Button in Menu</string>
    <string name="pref_title_screen_on">Keep screen on</string>
    <string name="pref_title_tab_list_item_show_close_button">Show close tab button</string>
    <string name="pref_title_use_bottom_sheets">Use bottom sheets</string>
    <string name="recommended">Recommended</string>
    <string name="reflow">Enable text reflow</string>
    <string name="rendering_mode">Rendering mode</string>
    <string name="reset_settings">Reset settings</string>
    <string name="restore_tabs_on_startup">Restore tabs on startup</string>
    <string name="save_data">Request \'Save-Data\'</string>
    <string name="search_in_new_tab">Search in new tab</string>
    <string name="search_suggestions">Search suggestions</string>
    <string name="search">Search engine</string>
    <string name="settings_about">About</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_black_status_bar">Black status bar</string>
    <string name="settings_ad_blocking">Ad blocker</string>
    <string name="settings_display">Look &amp; feel</string>
    <string name="settings_general">General</string>
    <string name="settings_portrait_landscape">Portrait &amp; Landscape</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_summary_about">Version, license…</string>
    <string name="settings_summary_apps">Third party applications…</string>
    <string name="settings_summary_content_control_toggle">Activate ads blocker and content filtering</string>
    <string name="settings_summary_content_control">Ads blocker and content filtering…</string>
    <string name="settings_summary_dark_mode_default">Define if new tabs use force dark mode by default</string>
    <string name="settings_summary_desktop_mode_default">Define if new tabs use desktop mode by default</string>
    <string name="settings_summary_display">App design, accent color, color mode…</string>
    <string name="settings_summary_general">Homepage, search services, JavaScript…</string>
    <string name="settings_summary_import_export">Backup, restore, reset…</string>
    <string name="settings_summary_portraitlandscape">Pull-to-Refresh, toolbar, drawer…</string>
    <string name="settings_summary_privacy">Cache, history, cookies…</string>
    <string name="settings_summary_tabs">Tab position, new tab, bottom sheets…</string>
    <string name="settings_title_apps">Apps</string>
    <string name="settings_title_dark_mode_default">Force dark mode</string>
    <string name="settings_title_desktop_mode_default">Desktop mode</string>
    <string name="settings">Settings</string>
    <string name="show_second_bar">Show secondary navigation bar</string>
    <string name="show_shortcuts">Show shortcuts on homepage</string>
    <string name="show_ssl">Show SSL warning dialogs</string>
    <string name="show_undo_tab">Show \"Undo\" button when a tab is closed</string>
    <string name="suggest">Search suggestions (number)</string>
    <string name="swap_bookmarks_and_tabs">Swap bookmark and tab drawers</string>
    <string name="tabs">Tabs</string>
    <string name="text_encoding">Text encoding</string>
    <string name="theme">Theme</string>
    <string name="title_text_size">Text size</string>
    <string name="update_message">Show update notification when starting the browser</string>
    <string name="url_contents">Tool bar shows</string>
    <string name="url_in_new_tab">URL in new tab</string>
    <string name="use_modify_filters">Modifier filters</string>
    <string name="vibrate_on_tab_close">Vibrate when a tab is closed</string>
    <string name="wideViewPort">Use wide viewport</string>
    <string name="window">Allow sites to open new windows</string>
    <string name="new_tab_position_after_value" translatable="false">AFTER_CURRENT_TAB</string>
    <string name="pref_key_accent" translatable="false">pref_key_accent</string>
    <string name="pref_key_black_status_bar" translatable="false">pref_key_black_status_bar</string>
    <string name="pref_key_blocklist_auto_update" translatable="false">pref_key_blocklist_auto_update</string>
    <string name="pref_key_blocklist_auto_update_frequency" translatable="false">pref_key_blocklist_auto_update_frequency</string>
    <string name="pref_key_bookmark_in_new_tab" translatable="false">pref_key_bookmark_in_new_tab</string>
    <string name="pref_key_browser_text_size" translatable="false">pref_key_browser_text_size</string>
    <string name="pref_key_close_drawer" translatable="false">pref_key_close_drawer</string>
    <string name="pref_key_content_control" translatable="false">pref_key_content_control</string>
    <string name="pref_key_content_control_filters" translatable="false">pref_key_content_control_filters</string>
    <string name="pref_key_cookies_incognito" translatable="false">pref_key_cookies_incognito</string>
    <string name="pref_key_cookies" translatable="false">pref_key_cookies</string>
    <string name="pref_key_dark_mode_default" translatable="false">pref_key_dark_mode_default</string>
    <string name="pref_key_default_text_encoding" translatable="false">pref_key_default_text_encoding</string>
    <string name="pref_key_desktop_mode_default" translatable="false">pref_key_desktop_mode_default</string>
    <string name="pref_key_homepage_in_new_tab" translatable="false">pref_key_homepage_in_new_tab</string>
    <string name="pref_key_javascript" translatable="false">pref_key_javascript</string>
    <string name="pref_key_keep_screen_on" translatable="false">pref_key_keep_screen_on</string>
    <string name="pref_key_load_images" translatable="false">pref_key_load_images</string>
    <string name="pref_key_locked_drawers" translatable="false">pref_key_locked_drawers</string>
    <string name="pref_key_menu_show_exit" translatable="false">pref_key_menu_show_exit</string>
    <string name="pref_key_modify_filters" translatable="false">pref_key_modify_filters</string>
    <string name="pref_key_new_tab_position" translatable="false">pref_key_new_tab_position</string>
    <string name="pref_key_overview_mode" translatable="false">pref_key_overview_mode</string>
    <string name="pref_key_rendering_mode" translatable="false">pref_key_rendering_mode</string>
    <string name="pref_key_request_save_data" translatable="false">pref_key_request_save_data</string>
    <string name="pref_key_restore_tabs_on_startup" translatable="false">pref_key_restore_tabs_on_startup</string>
    <string name="pref_key_search_in_new_tab" translatable="false">pref_key_search_in_new_tab</string>
    <string name="pref_key_session_export_category" translatable="false">pref_key_session_export_category</string>
    <string name="pref_key_sessions_import" translatable="false">pref_key_sessions_import</string>
    <string name="pref_key_show_download_confirmation" translatable="false">pref_key_show_download_confirmation</string>
    <string name="pref_key_long_click_tab" translatable="false">pref_key_long_click_tab</string>
    <string name="pref_key_show_undo_tab" translatable="false">pref_key_show_undo_tab</string>
    <string name="pref_key_show_update" translatable="false">pref_key_show_update</string>
    <string name="pref_key_support_multiple_window" translatable="false">pref_key_support_multiple_window</string>
    <string name="pref_key_swap_tabs_and_bookmarks" translatable="false">pref_key_swap_tabs_and_bookmarks</string>
    <string name="pref_key_tab_list_item_show_close_button" translatable="false">pref_key_tab_list_item_show_close_button</string>
    <string name="pref_key_text_reflow" translatable="false">pref_key_text_reflow</string>
    <string name="pref_key_theme" translatable="false">pref_key_theme</string>
    <string name="pref_key_tool_bar_text_display" translatable="false">pref_key_tool_bar_text_display</string>
    <string name="pref_key_url_in_new_tab" translatable="false">pref_key_url_in_new_tab</string>
    <string name="pref_key_use_bottom_sheets" translatable="false">pref_key_use_bottom_sheets</string>
    <string name="pref_key_vibrate_on_tab_close" translatable="false">pref_key_vibrate_on_tab_close</string>
    <string name="pref_key_web_page_theme" translatable="false">pref_key_web_page_theme</string>
    <string name="pref_key_wide_viewport" translatable="false">pref_key_wide_viewport</string>
</resources>