<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_display">

        <Preference
            android:key="@string/pref_key_theme"
            android:title="@string/theme"
            app:icon="@drawable/ic_brush" />

        <Preference
            android:key="@string/pref_key_accent"
            android:title="@string/accent_color"
            app:icon="@drawable/ic_palette" />

        <Preference
            android:key="@string/pref_key_browser_text_size"
            android:title="@string/title_text_size"
            app:icon="@drawable/ic_text_size" />

        <Preference
            android:key="@string/pref_key_rendering_mode"
            android:title="@string/rendering_mode"
            app:icon="@drawable/ic_rendering_mode" />

        <Preference
            android:key="@string/pref_key_tool_bar_text_display"
            android:title="@string/url_contents"
            app:icon="@drawable/ic_short_text" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_general">

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_web_page_theme"
            android:summary="@string/recommended"
            android:title="@string/color_mode"
            app:icon="@drawable/ic_brush" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="false"
            android:key="second_bar"
            android:title="@string/show_second_bar"
            app:icon="@drawable/ic_nav" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_black_status_bar"
            android:title="@string/settings_black_status_bar"
            app:icon="@drawable/ic_phone" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_wide_viewport"
            android:summary="@string/recommended"
            android:title="@string/wideViewPort"
            app:icon="@drawable/ic_baseline_aspect_ratio_24" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_overview_mode"
            android:summary="@string/recommended"
            android:title="@string/overViewMode"
            app:icon="@drawable/ic_eye" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_text_reflow"
            android:title="@string/reflow"
            app:icon="@drawable/ic_text_variant" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
