<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/tabs">

        <ListPreference
            app:defaultValue="@string/new_tab_position_after_value"
            app:entries="@array/new_tab_positions"
            app:entryValues="@array/new_tab_position_values"
            app:icon="@drawable/ic_library_add"
            app:key="@string/pref_key_new_tab_position"
            app:title="@string/new_tab_position"
            app:useSimpleSummaryProvider="true" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_restore_tabs_on_startup"
            android:summary="@string/recommended"
            android:title="@string/restore_tabs_on_startup"
            app:icon="@drawable/ic_save" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_show_undo_tab"
            android:summary="@string/recommended"
            android:title="@string/show_undo_tab"
            app:icon="@drawable/ic_undo"
            app:singleLineTitle="false" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_vibrate_on_tab_close"
            android:title="@string/vibrate_on_tab_close"
            app:icon="@drawable/ic_vibrate"
            app:singleLineTitle="false" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="true"
            android:summary="@string/recommended"
            app:icon="@drawable/ic_tab"
            app:key="@string/pref_key_long_click_tab"
            app:singleLineTitle="false"
            app:title="@string/long_press_tab" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="@bool/pref_default_close_drawer"
            android:key="@string/pref_key_close_drawer"
            android:summary="@string/pref_summary_close_drawer"
            android:title="@string/pref_title_close_drawer"
            app:icon="@drawable/ic_arrow_left" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="@bool/pref_default_tab_list_item_show_close_button"
            android:key="@string/pref_key_tab_list_item_show_close_button"
            android:summary="@string/pref_summary_tab_list_item_show_close_button"
            android:title="@string/pref_title_tab_list_item_show_close_button"
            app:icon="@drawable/ic_action_delete" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="false"
            android:key="last_tab"
            android:title="@string/close_on_last_tab"
            app:icon="@drawable/ic_apps" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            app:defaultValue="@bool/pref_default_search_in_new_tab"
            app:icon="@drawable/ic_search"
            app:key="@string/pref_key_search_in_new_tab"
            app:title="@string/search_in_new_tab" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            app:defaultValue="@bool/pref_default_url_in_new_tab"
            app:icon="@drawable/ic_web"
            app:key="@string/pref_key_url_in_new_tab"
            app:title="@string/url_in_new_tab" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            app:defaultValue="@bool/pref_default_homepage_in_new_tab"
            app:icon="@drawable/ic_action_home"
            app:iconSpaceReserved="false"
            app:key="@string/pref_key_homepage_in_new_tab"
            app:title="@string/homepage_in_new_tab" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:summary="@string/recommended"
            app:defaultValue="@bool/pref_default_bookmark_in_new_tab"
            app:icon="@drawable/ic_bookmark_border"
            app:iconSpaceReserved="false"
            app:key="@string/pref_key_bookmark_in_new_tab"
            app:title="@string/bookmark_in_new_tab" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_desktop_mode_default"
            android:summary="@string/settings_summary_desktop_mode_default"
            android:title="@string/settings_title_desktop_mode_default"
            app:icon="@drawable/ic_desktop" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_dark_mode_default"
            android:summary="@string/settings_summary_dark_mode_default"
            android:title="@string/settings_title_dark_mode_default"
            app:icon="@drawable/ic_dark_mode"
            app:iconSpaceReserved="false" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="@bool/pref_default_use_bottom_sheets"
            android:disableDependentsState="true"
            android:key="@string/pref_key_use_bottom_sheets"
            android:summary="@string/pref_summary_use_bottom_sheets"
            android:title="@string/pref_title_use_bottom_sheets"
            app:icon="@drawable/ic_fullscreen" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="@bool/pref_default_locked_drawers"
            android:dependency="@string/pref_key_use_bottom_sheets"
            android:key="@string/pref_key_locked_drawers"
            android:summary="@string/pref_summary_locked_drawers"
            android:title="@string/pref_title_locked_drawers"
            app:icon="@drawable/ic_block" />

        <com.jamal2367.styx.preference.M3SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/pref_key_use_bottom_sheets"
            android:key="@string/pref_key_swap_tabs_and_bookmarks"
            android:title="@string/swap_bookmarks_and_tabs"
            app:icon="@drawable/ic_cache"
            app:singleLineTitle="false" />

    </PreferenceCategory>

</PreferenceScreen>
